# HWGL

./: .gitignore  CMakeLists.txt  README.md  color_util.py
data/objs/: terrain.mtl
data/shaders/: StandardShading.fragmentshader  StandardShading.vertexshader
data/shaders/ShaderToy/: fs.glsl  vs.glsl
data/shaders/StandardShadingNoSpec/: fs.glsl
data/shaders/TextShader/: TextVertexShader.vertexshader
data/shaders/colored/: vs.glsl
data/textures/: uvCube.DDS  uvmap.DDS
inc/: App.hpp  GLSceneCommon.hpp  Obj.hpp  SceneTree.hpp  Shader.hpp  Texture.hpp  commonHWGL.hpp
inc/GL/: controls.hpp  objloader.hpp  quaternion_utils.hpp  shader.hpp  tangentspace.hpp  text2D.hpp  texture.hpp  vboindexer.hpp
src/: App.cpp  AppControls.cpp  AppInits.cpp  Obj.cpp  SceneTree.cpp  Shader.cpp  Texture.cpp  main.cpp  tut8.cpp  utils.cpp
src/App/: App.cpp  AppControls.cpp  AppGame.cpp  AppInits.cpp  AppLoaders.cpp  AppPlayer.cpp  AppScenery.cpp  AppText2D.cpp  AppUtils.cpp
src/GL/: controls.cpp  objloader.cpp  quaternion_utils.cpp  shader.cpp  tangentspace.cpp  text2D.cpp  texture.cpp  vboindexer.cpp
src/GL_utils/: controls.cpp  objloader.cpp  quaternion_utils.cpp  tangentspace.cpp  text2D.cpp  vboindexer.cpp
src/SceneTree/: SceneTree.cpp  SceneTreeTransformations.cpp
src/Shader/: Shader.cpp  ShaderLoaders.cpp
